Tutorships - QuillJS editor fully implemented. - Added collapse button. Global CSS. - Fixed a style override with anchor tags.

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -36,10 +36,10 @@ ul.items {
     margin-top: 40%;
 }
 
-a:active,
-a:link,
-a:visited,
-a:hover {
+.navbar a:active,
+.navbar a:link,
+.navbar a:visited,
+.navbar a:hover {
     color: white;
     text-decoration: none;
 }
